modificacion imagen mismo tamaño

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </li>
 
             <li class="nav-button"> 
-                <a href="admition.html">Admición</a></li>
+                <a href="solicitud.html">Admición</a></li>
             </ul>
     </nav>
 
@@ -66,7 +66,7 @@
 
         <div class="contain">
             <h2 class="work_title">Estimulación Cognitiva</h2>
-            <img class="work_img" src="/images/Estimulacion_cognitiva.jpg" alt="Taller Estimulñación Cognitiva" title="Taller de Estimulación Cognitiva"/>
+            <img class="work_img" src="/images/Proyecto-de-Jardinería.jpg" alt="Taller Estimulñación Cognitiva" title="Taller de Estimulación Cognitiva"/>
             <p class="work_p">Dolor cupidatat et aliquip ullamco duis magna elit quis officia ea. Ipsum mollit et eiusmod in aute anim cillum ullamco tempor sint nisi. Velit laborum labore nisi in enim. Adipisicing pariatur pariatur esse occaecat sint officia consectetur in nostrud nulla quis Lorem. Velit quis ea et est fugiat. Aute minim sit reprehenderit et quis aute cupidatat nisi proident dolor proident nulla culpa. Fugiat sit Lorem ullamco nostrud consectetur ad quis labore incididunt.
                 Ea mollit nulla adipisicing culpa. Dolor eu proident elit id. Laborum excepteur officia voluptate nostrud consequat incididunt enim qui reprehenderit nulla veniam anim. Excepteur officia sint in proident tempor sint veniam enim dolore. Esse aliquip deserunt ad adipisicing do elit minim velit nulla do sit aliqua enim.
             </p>
@@ -74,7 +74,7 @@
 
         <div class="contain">
             <h2 class="work_title">Taller de Computación</h2>
-            <img class="work_img" src="/images/estudiantes.computacion.jpg" alt="Taller de Computación" title="Taller de Computación"/>
+            <img class="work_img" src="/images/Proyecto-de-Jardinería.jpg" alt="Taller de Computación" title="Taller de Computación"/>
             <p class="work_p">Dolor cupidatat et aliquip ullamco duis magna elit quis officia ea. Ipsum mollit et eiusmod in aute anim cillum ullamco tempor sint nisi. Velit laborum labore nisi in enim. Adipisicing pariatur pariatur esse occaecat sint officia consectetur in nostrud nulla quis Lorem. Velit quis ea et est fugiat. Aute minim sit reprehenderit et quis aute cupidatat nisi proident dolor proident nulla culpa. Fugiat sit Lorem ullamco nostrud consectetur ad quis labore incididunt.
                 Ea mollit nulla adipisicing culpa. Dolor eu proident elit id. Laborum excepteur officia voluptate nostrud consequat incididunt enim qui reprehenderit nulla veniam anim. Excepteur officia sint in proident tempor sint veniam enim dolore. Esse aliquip deserunt ad adipisicing do elit minim velit nulla do sit aliqua enim.
             </p>
@@ -82,7 +82,7 @@
 
         <div class="contain">
             <h2 class="work_title">Taller de Música</h2>
-            <img class="work_img" src="/images/murga.jpg" alt="Murga" title="Murga"/>
+            <img class="work_img" src="/images/Proyecto-de-Jardinería.jpg" alt="Murga" title="Murga"/>
             <p class="work_p">Dolor cupidatat et aliquip ullamco duis magna elit quis officia ea. Ipsum mollit et eiusmod in aute anim cillum ullamco tempor sint nisi. Velit laborum labore nisi in enim. Adipisicing pariatur pariatur esse occaecat sint officia consectetur in nostrud nulla quis Lorem. Velit quis ea et est fugiat. Aute minim sit reprehenderit et quis aute cupidatat nisi proident dolor proident nulla culpa. Fugiat sit Lorem ullamco nostrud consectetur ad quis labore incididunt.
                 Ea mollit nulla adipisicing culpa. Dolor eu proident elit id. Laborum excepteur officia voluptate nostrud consequat incididunt enim qui reprehenderit nulla veniam anim. Excepteur officia sint in proident tempor sint veniam enim dolore. Esse aliquip deserunt ad adipisicing do elit minim velit nulla do sit aliqua enim.
             </p>
@@ -90,7 +90,7 @@
 
         <div class="contain">
             <h2 class="work_title">Taller de Pintura</h2>
-            <img class="work_img" src="/images/pintura.jpeg" alt="Taller Pintura" title="Taller de Pintura"/>
+            <img class="work_img" src="/images/Proyecto-de-Jardinería.jpg" alt="Taller Pintura" title="Taller de Pintura"/>
             <p class="work_p">Dolor cupidatat et aliquip ullamco duis magna elit quis officia ea. Ipsum mollit et eiusmod in aute anim cillum ullamco tempor sint nisi. Velit laborum labore nisi in enim. Adipisicing pariatur pariatur esse occaecat sint officia consectetur in nostrud nulla quis Lorem. Velit quis ea et est fugiat. Aute minim sit reprehenderit et quis aute cupidatat nisi proident dolor proident nulla culpa. Fugiat sit Lorem ullamco nostrud consectetur ad quis labore incididunt.
                 Ea mollit nulla adipisicing culpa. Dolor eu proident elit id. Laborum excepteur officia voluptate nostrud consequat incididunt enim qui reprehenderit nulla veniam anim. Excepteur officia sint in proident tempor sint veniam enim dolore. Esse aliquip deserunt ad adipisicing do elit minim velit nulla do sit aliqua enim.
             </p>
@@ -98,7 +98,7 @@
 
         <div class="contain">
             <h2 class="work_title">Taller de Teatro</h2>
-            <img class="work_img" src="/images/teatro.jpg" alt="Taller de Teatro" title="Taller de Teatro"/>
+            <img class="work_img" src="/images/Proyecto-de-Jardinería.jpg" alt="Taller de Teatro" title="Taller de Teatro"/>
             <p class="work_p">Dolor cupidatat et aliquip ullamco duis magna elit quis officia ea. Ipsum mollit et eiusmod in aute anim cillum ullamco tempor sint nisi. Velit laborum labore nisi in enim. Adipisicing pariatur pariatur esse occaecat sint officia consectetur in nostrud nulla quis Lorem. Velit quis ea et est fugiat. Aute minim sit reprehenderit et quis aute cupidatat nisi proident dolor proident nulla culpa. Fugiat sit Lorem ullamco nostrud consectetur ad quis labore incididunt.
                 Ea mollit nulla adipisicing culpa. Dolor eu proident elit id. Laborum excepteur officia voluptate nostrud consequat incididunt enim qui reprehenderit nulla veniam anim. Excepteur officia sint in proident tempor sint veniam enim dolore. Esse aliquip deserunt ad adipisicing do elit minim velit nulla do sit aliqua enim.
             </p>
@@ -106,7 +106,7 @@
 
         <div class="contain">
             <h2 class="work_title">Taller de Educación Física</h2>
-            <img class="work_img" src="/images/educacion_fisica.jpg" alt="Taller de Educación Física" title="Taller de Educación Física"/>
+            <img class="work_img" src="/images/Proyecto-de-Jardinería.jpg" alt="Taller de Educación Física" title="Taller de Educación Física"/>
             <p class="work_p">Dolor cupidatat et aliquip ullamco duis magna elit quis officia ea. Ipsum mollit et eiusmod in aute anim cillum ullamco tempor sint nisi. Velit laborum labore nisi in enim. Adipisicing pariatur pariatur esse occaecat sint officia consectetur in nostrud nulla quis Lorem. Velit quis ea et est fugiat. Aute minim sit reprehenderit et quis aute cupidatat nisi proident dolor proident nulla culpa. Fugiat sit Lorem ullamco nostrud consectetur ad quis labore incididunt.
                 Ea mollit nulla adipisicing culpa. Dolor eu proident elit id. Laborum excepteur officia voluptate nostrud consequat incididunt enim qui reprehenderit nulla veniam anim. Excepteur officia sint in proident tempor sint veniam enim dolore. Esse aliquip deserunt ad adipisicing do elit minim velit nulla do sit aliqua enim.
             </p>
